switch to jdk 21 sequenced collections