@@ -30,7 +30,7 @@ class AuthenticationCredentialTypeMetaDataPopulatorTests {
         val auth = builder.build();
         assertEquals(
             credentials.getClass().getSimpleName(),
-            auth.getAttributes().get(Credential.CREDENTIAL_TYPE_ATTRIBUTE).get(0));
+            auth.getAttributes().get(Credential.CREDENTIAL_TYPE_ATTRIBUTE).getFirst());
     }
 
     @Test
