@@ -65,8 +65,8 @@ public record InweboService(CasConfigurationProperties casProperties, InweboCons
             val count = loginSearchResult.getCount();
             response.setCount(count);
             if (count == 1) {
-                var activationStatus = loginSearchResult.getActivationStatus().get(0);
-                val userId = loginSearchResult.getId().get(0);
+                var activationStatus = loginSearchResult.getActivationStatus().getFirst();
+                val userId = loginSearchResult.getId().getFirst();
                 if (activationStatus == 1) {
                     val loginQueryResult = consoleAdmin.loginQuery(userId);
                     if ("OK".equals(loginQueryResult.getErr())) {
@@ -79,7 +79,7 @@ public record InweboService(CasConfigurationProperties casProperties, InweboCons
                     }
                 }
                 response.setUserId(userId);
-                response.setUserStatus(loginSearchResult.getStatus().get(0));
+                response.setUserStatus(loginSearchResult.getStatus().getFirst());
                 response.setActivationStatus(activationStatus);
             }
         }
