@@ -39,7 +39,7 @@ class OpenLdapAuthenticationHandlerTests extends BaseLdapAuthenticationHandlerTe
     private CasConfigurationProperties casProperties;
 
     protected String getLdif(final String user) {
-        val baseDn = casProperties.getAuthn().getLdap().get(0).getBaseDn();
+        val baseDn = casProperties.getAuthn().getLdap().getFirst().getBaseDn();
         return String.format("dn: cn=%s,%s%n"
             + "objectClass: top%n"
             + "objectClass: person%n"
