@@ -64,7 +64,7 @@ public class WSFederationValidateRequestController extends BaseWSFederationReque
                     val registeredService = getWsFederationRegisteredService(service);
                     LOGGER.debug("Invoking logout operation for request [{}], redirecting next to [{}] matched against [{}]",
                         fedRequest, fedRequest.wreply(), registeredService);
-                    val logoutParam = getConfigContext().getCasProperties().getLogout().getRedirectParameter().get(0);
+                    val logoutParam = getConfigContext().getCasProperties().getLogout().getRedirectParameter().getFirst();
                     return getConfigContext().getCasProperties()
                         .getServer().getLogoutUrl().concat("?").concat(logoutParam).concat("=").concat(service.getId());
                 },
